--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Configurations
-title:            book2
+title:            다문화 학생 가르치기
 longtitle:        book2
-author:           HE Tao
-email:            sighingnow@gmail.com
+author:           제디아
+email:            admin@jdya.net
 description: >
   Build Jekyll site with the GitBook style.
 
