--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Configurations
 title:            다문화 학생 가르치기
 longtitle:        book2
-author:           제디아
+author:           wpd
 email:            admin@jdya.net
 description: >
   Build Jekyll site with the GitBook style.
